# avatarsquare

./: .gitignore  README.md  compose.yaml  docker-compose.yml  server-update.md
.claude/skills/verify/: SKILL.md
.github/workflows/: build-server-image.yml
client/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/public/animations/: README.txt
client/public/gimmicks/: counter.wasm  scarecrow.wasm  slime.wasm
client/public/sprites/: LICENSE.txt
client/public/textures/: LICENSE.txt
client/public/worlds/: annex.json  island.json  square.json
client/scripts/generate-island/: index.html  main.ts
client/scripts/generate-square/: index.html  main.ts
client/src/: main.tsx
client/src/avatar/: AnimationController.ts  Avatar.ts  AvatarStreamer.ts  animationLoaders.ts  builtinClips.ts  captureSpec.ts  lipsync.test.ts  lipsync.ts  mixamoVRMRigMap.ts  verticalMotion.test.ts  verticalMotion.ts  vrmCache.ts
deploy/: avatarsquare-token.service  livekit.service
deploy/k8s/: deployment.yaml  secret.example.yaml  service.yaml
gimmicks/: Cargo.toml  build.sh
gimmicks/counter/: Cargo.toml
gimmicks/counter/src/: lib.rs
gimmicks/scarecrow/: Cargo.toml
gimmicks/scarecrow/src/: lib.rs
gimmicks/sdk/: Cargo.toml
gimmicks/sdk/src/: lib.rs
gimmicks/slime/: Cargo.toml
gimmicks/slime/src/: lib.rs
server/: .dockerignore  Dockerfile  bot.go  go.mod  go.sum  main.go
server/scene/: hit.go  hit_test.go  messages.go  runtime.go  script.go  session.go  session_test.go  slime_test.go
server/world/: world.go  world_test.go
(+80 files in other folders)
