# ワールドスクリプト(wasm)のワークスペース。
# サーバー(wazero)が実行する。ビルドはbuild.sh(成果物はclient/public/gimmicks/へ)
[workspace]
resolver = "2"
members = ["sdk", "scarecrow", "counter", "slime"]

[workspace.dependencies]
asq-sdk = { path = "sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# wasmバイナリを小さくする(サイズ最適化+LTO)。panicはトラップになり
# ホスト(wazero)がGoのerrorとして隔離する
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
